# curves-modeling

./: .gitignore  CMakeLists.txt  LICENSE  README.md  thirdDegCurveCutting
src/: ApproxCubicSpline.cc  ApproxSpline.cc  Bezier.cc  Bezier.h  Casteljau.cpp  Casteljau.h  CurveCutting.cc  FourPointsScheme.cc  InterpolatingSpline.cc  InterpolatingSpline.h  RationalBezier.cc  Spline.c  Spline.cpp  ThirdDegCurveCutting.cc
src/utils/: Colors.cc  Colors.h  Draw.cc  Draw.h  Points.cc  Points.h  Renderer.cc  Renderer.h  SplineUtils.cc  SplineUtils.h
